# gti-assignment

./: README.md  pyproject.toml
notebooks/.ipynb_checkpoints/: data-exploration-checkpoint.ipynb
src/: main.py
src/opentender_scraper/: scrapy.cfg
src/opentender_scraper/opentender_scraper/: items.py  middlewares.py  pipelines.py  settings.py
src/opentender_scraper/opentender_scraper/spiders/: opendenter_spider.py
src/util/: fetch.py
